--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <div class="freqs">
     <p>A <span class="a">--</span>Hz</p>  
     <p>B <span class="b">--</span>Hz</p>
+    <p>C <span class="c">--</span>Hz</p>
   </div>
   <div class="c-overlay"><canvas id="fft"></canvas></div>
   <script src="./src/main.js"></script>
